Implementing Class Parser